platform/kafbat-ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafbat-ui
spec:
  type: ClusterIP
  selector:
    app: kafbat-ui
  ports:
    - name: http
      port: 80
      targetPort: 8080
